--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "reinstallNodeModules": "rm -rf node_modules package-lock.json && npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf builds && babel-node node_modules/webpack-cli/bin/cli.js --config webpack.prod.js",
+    "serve:web": "http-server builds/web",
     "start": "babel-node node_modules/.bin/webpack-dev-server",
     "eslint": "eslint --fix src/**/*.js",
     "prettier": "prettier \"src/**/*.js\" --write",
@@ -42,6 +43,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-inferno": "^7.11.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "prettier": "^1.14.3",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
