--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "serve:web": "http-server builds/web",
     "start": "babel-node node_modules/.bin/webpack-dev-server",
     "eslint": "eslint --fix src/**/*.js",
-    "prettier": "prettier \"src/**/*.js\" --write",
+    "prettier": "prettier \"src/**/*.{js,scss}\" --write",
     "lint": "npm run prettier && npm run eslint"
   },
   "author": "April Mintac Pineda",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.4.2",
     "inferno": "^6.0.3",
     "inferno-router": "^6.0.3"
   },
@@ -40,11 +41,17 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-inferno": "^6.0.2",
+    "css-loader": "^1.0.0",
     "eslint": "^5.8.0",
     "eslint-plugin-inferno": "^7.11.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "node-sass": "^4.9.4",
     "prettier": "^1.14.3",
+    "prettier-stylelint": "^0.4.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
