--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-inferno": "^6.0.2",
+    "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^1.0.0",
     "eslint": "^5.8.0",
     "eslint-plugin-inferno": "^7.11.0",
