used BUILD_TARGET to determine source and output directory;

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "reinstallNodeModules": "rm -rf node_modules package-lock.json && npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf builds && babel-node node_modules/webpack-cli/bin/cli.js --config webpack.prod.js",
+    "build": "rm -rf builds && babel-node node_modules/webpack-cli/bin/cli.js --config webpack/build && npm run filesizes",
+    "filesizes": "babel-node webpack/filesizes.js",
     "serve:web": "http-server builds/web",
     "serve:native": "http-server builds/native",
     "start:web": "babel-node node_modules/.bin/webpack-dev-server --config webpack.web.js",
@@ -30,9 +31,9 @@
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.2",
-    "inferno": "^6.0.3",
-    "inferno-async-component": "^1.0.1",
-    "inferno-router": "^6.0.3"
+    "inferno": "^6.1.3",
+    "inferno-async-component": "^1.1.3",
+    "inferno-router": "^6.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -44,23 +45,27 @@
     "@babel/preset-flow": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.4",
     "babel-plugin-inferno": "^6.0.2",
-    "copy-webpack-plugin": "^4.5.4",
-    "css-loader": "^1.0.0",
+    "chalk": "^2.4.1",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
+    "dotenv": "^6.1.0",
     "eslint": "^5.8.0",
     "eslint-plugin-inferno": "^7.11.0",
     "file-loader": "^2.0.0",
+    "gzip-size": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "inline-chunks-html-webpack-plugin": "^1.3.1",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.2.0",
+    "postcss-preset-env": "^6.3.0",
     "prettier": "^1.14.3",
     "prettier-stylelint": "^0.4.2",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "6.0.7",
     "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
