--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "prettier-stylelint": "^0.4.2",
     "sass-loader": "6.0.7",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.1.0",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
