updated start script; moved configs to webpack; updated npm scripts;

--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "reinstallNodeModules": "rm -rf node_modules package-lock.json && npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf builds && babel-node node_modules/webpack-cli/bin/cli.js --config webpack/build && npm run filesizes",
-    "filesizes": "babel-node webpack/filesizes.js",
+    "start": "babel-node node_modules/.bin/webpack-dev-server --config webpack/start.js",
     "serve:web": "http-server builds/web",
-    "serve:native": "http-server builds/native",
-    "start:web": "babel-node node_modules/.bin/webpack-dev-server --config webpack.web.js",
-    "start:native": "babel-node node_modules/.bin/webpack-dev-server --config webpack.native.js",
+    "serve": "http-server builds",
+    "filesizes": "babel-node webpack/filesizes.js",
     "eslint": "eslint \"src/**/*.js\" --fix",
     "prettier": "prettier \"src/**/*.{js,scss}\" --write",
     "lint": "npm run prettier && npm run eslint"
