--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "terser-webpack-plugin": "^1.1.0",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-loader-clean-pragma": "^1.0.1"
   }
 }
