--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
+# used in `npm run start`
 BUILD_TARGETS="web"
+
+BUILD_TARGET="web"
 PUBLIC_PATH="/"
 WEBSITE_NAME="My Web App"
 
 APP_ENV_TEST=true
+
