--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   "scripts": {
     "reinstallNodeModules": "rm -rf node_modules package-lock.json && npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf builds && babel-node node_modules/parallel-webpack/bin/run.js --config webpack/build && npm run filesizes",
-    "start": "babel-node node_modules/.bin/webpack-dev-server --config webpack/start.js",
+    "build": "rm -rf builds && node node_modules/parallel-webpack/bin/run.js --config webpack/build && npm run filesizes",
+    "start": "node node_modules/.bin/webpack-dev-server --config webpack/start.js",
     "serve:web": "http-server builds/web",
     "serve": "http-server builds",
-    "filesizes": "babel-node webpack/filesizes.js",
+    "filesizes": "node webpack/filesizes.js",
     "eslint": "eslint \"src/**/*.js\" --fix",
     "prettier": "prettier \"src/**/*.{js,scss}\" --write",
     "lint": "npm run prettier && npm run eslint"
@@ -29,48 +29,50 @@
   "author": "April Mintac Pineda",
   "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.4.2",
-    "inferno": "^6.1.3",
-    "inferno-async-component": "^1.1.3",
-    "inferno-router": "^6.1.3"
+    "@fortawesome/fontawesome-free": "^5.5.0",
+    "inferno": "^6.3.1",
+    "inferno-async-component": "^1.1.4",
+    "inferno-create-element": "^6.3.1",
+    "inferno-router": "^6.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
     "@babel/node": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-jsx": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
     "@babel/preset-flow": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "babel-plugin-inferno": "^6.0.2",
+    "babel-plugin-inferno": "^6.0.3",
     "chalk": "^2.4.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "dotenv": "^6.1.0",
-    "eslint": "^5.8.0",
+    "eslint": "^5.9.0",
     "eslint-plugin-inferno": "^7.11.0",
     "file-loader": "^2.0.0",
     "gzip-size": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "inline-chunks-html-webpack-plugin": "^1.3.1",
-    "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.9.4",
+    "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "parallel-webpack": "^2.3.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.3.0",
-    "prettier": "^1.14.3",
+    "postcss-preset-env": "^6.4.0",
+    "prettier": "^1.15.2",
     "prettier-stylelint": "^0.4.2",
     "sass-loader": "7.1.0",
+    "script-ext-html-webpack-plugin": "^2.1.3",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.1.0",
-    "webpack": "^4.23.1",
+    "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
-    "webpack-loader-clean-pragma": "^1.0.1"
+    "webpack-loader-clean-pragma": "^1.0.2"
   }
 }
