PWA enabled powered by workbox;

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ BUILD_TARGETS="web"
 BUILD_TARGET="web"
 PUBLIC_PATH="/"
 WEBSITE_NAME="My Web App"
-HTTPS=false
+HTTPS="false"
 
-APP_ENV_TEST=true
+APP_ENV_TEST="true"
