--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
-    "webpack-loader-clean-pragma": "^1.0.2"
+    "webpack-loader-clean-pragma": "^1.0.2",
+    "workbox-webpack-plugin": "^3.6.3"
   }
 }
