env vars parsing

--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ HOST="localhost"
 PORT="3030"
 
 APP_ENV_TEST="true"
+APP_ENV_TEST_INT="1234"
+APP_ENV_TEST_FLOAT="1234.53"
+APP_ENV_TEST_OBJ='{"test":"value","test2":"value2","test3":"value3"}'
+APP_ENV_TEST_OBJ_COMPLEX='{"test":["test",123,123.25],"test2":{"test-in-test2":"value","ing":["hello",6534]}}'
+APP_ENV_TEST_ARRAY='["test",123,123.23,"testing"]'
